--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                         <div class="testimonial-item">
                             <p>
                                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                                Szeretlek
+                                Isten éltessen sokáig, Babuka Dlága! Legyen mindig sugárzó az arcod, csillogó a tekinteted, bízz magadban és maradj örökké ilyen melegszívű, vicces és pozitív! Nagyon szeretlek!
                                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                             </p>
                             <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
@@ -355,7 +355,7 @@
                         <div class="testimonial-item">
                             <p>
                                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                                Szeretlek
+                                Az Isten által szolgáinak rendelt első kötelem annak felismerése, Ki Kinyilatkoztatásának Hajnala és törvényeinek Kútfeje, Ki az Istenséget képviseli mind Ügyének Királyságában, mind a teremtés világában. Ki ezen feladatát teljesíti, elnyert az minden jót; és ki megfosztatik tőle, eltévelyedett, mégha ő is szerzője minden igaz cselekedetnek.
                                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                             </p>
                             <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
