--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </label>
         </div>
 
-        <h1><a href="index.html">Annamária Makay</a></h1>
+        <h1>Annamária Makay</h1>
         <h2>I'm a passionate <span data-profile data-pianist="pianist" data-designer="graphic designer">pianist</span> from Budapest</h2>
 
         <nav id="navbar" class="navbar">
