--- a/index.html
+++ b/index.html
@@ -33,51 +33,51 @@
 
     <!-- ======= Header ======= -->
     <header id="header">
-        <!--<div id="switch-mode-prompt" class="switch-mode-prompt">
-            <span>Switch Mode to see more</span>
-            <svg width="100" height="50" viewBox="0 0 100 50" class="arrow">
-                <path d="M2,25 C20,10 80,10 98,25" stroke="black" stroke-width="2" fill="none" marker-end="url(#arrowhead)" />
-                <defs>
-                    <marker id="arrowhead" markerWidth="10" markerHeight="7"
-                            refX="0" refY="3.5" orient="auto">
-                        <polygon points="0 0, 10 3.5, 0 7" />
-                    </marker>
-                </defs>
-            </svg>
-        </div>-->
+        <!-- <div id="switch-mode-prompt" class="switch-mode-prompt">
+         <span>Switch Mode to see more</span>
+         <svg width="100" height="50" viewBox="0 0 100 50" class="arrow">
+             <path d="M2,25 C20,10 80,10 98,25" stroke="black" stroke-width="2" fill="none" marker-end="url(#arrowhead)" />
+             <defs>
+                 <marker id="arrowhead" markerWidth="10" markerHeight="7"
+                         refX="0" refY="3.5" orient="auto">
+                     <polygon points="0 0, 10 3.5, 0 7" />
+                 </marker>
+             </defs>
+         </svg>
+     </div>-->
 
-    <div class="container">
-        <!-- Toggle Switch -->
-        <div class="profile-toggle">
-            <label class="switch">
-                <input type="checkbox" id="profile-toggle">
-                <span class="slider round"></span>
-                <span class="toggle-label" id="toggle-text">Pianist</span>
-            </label>
+        <div class="container">
+            <!-- Toggle Switch -->
+            <div class="profile-toggle">
+                <label class="switch">
+                    <input type="checkbox" id="profile-toggle">
+                    <span class="slider round"></span>
+                    <span class="toggle-label" id="toggle-text">Pianist</span>
+                </label>
+            </div>
+
+            <h1>Annamária Makay</h1>
+            <h2>I'm a passionate <span data-profile data-pianist="pianist" data-designer="graphic designer">pianist</span> from Budapest</h2>
+
+            <nav id="navbar" class="navbar">
+                <ul>
+                    <li><a class="nav-link active" href="#header">Home</a></li>
+                    <li><a class="nav-link" href="#about">About</a></li>
+                    <li><a class="nav-link" href="#resume">Resume</a></li>
+                    <li><a class="nav-link" href="#services">Services</a></li>
+                    <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                    <li><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+                <i class="bi bi-list mobile-nav-toggle"></i>
+            </nav><!-- .navbar -->
+
+            <div class="social-links">
+                <a href="https://www.facebook.com/profile.php?id=100008245698356" class="facebook"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.instagram.com/annamarimakay/" class="instagram"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/annam%C3%A1ria-makay-9a0342269/?profileId=ACoAAEG5SwgBAZ7fm3xun11TAh4x3EGZsPZ7-zI" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            </div>
+
         </div>
-
-        <h1>Annamária Makay</h1>
-        <h2>I'm a passionate <span data-profile data-pianist="pianist" data-designer="graphic designer">pianist</span> from Budapest</h2>
-
-        <nav id="navbar" class="navbar">
-            <ul>
-                <li><a class="nav-link active" href="#header">Home</a></li>
-                <li><a class="nav-link" href="#about">About</a></li>
-                <li><a class="nav-link" href="#resume">Resume</a></li>
-                <li><a class="nav-link" href="#services">Services</a></li>
-                <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
-                <li><a class="nav-link" href="#contact">Contact</a></li>
-            </ul>
-            <i class="bi bi-list mobile-nav-toggle"></i>
-        </nav><!-- .navbar -->
-
-        <div class="social-links">
-            <a href="https://www.facebook.com/profile.php?id=100008245698356" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="https://www.instagram.com/annamarimakay/" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/annam%C3%A1ria-makay-9a0342269/?profileId=ACoAAEG5SwgBAZ7fm3xun11TAh4x3EGZsPZ7-zI" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        </div>
-
-    </div>
     </header><!-- End Header -->
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
@@ -103,7 +103,7 @@
                         <div class="col-lg-6">
                             <ul>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>5 May 2000</span></li>
-                                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="https://immense-ocean-19435-10dbca40f797.herokuapp.com/"><span>Click here</span></a></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+36 30 4098438</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Budapest, Hungary</span></li>
                             </ul>
